fixed issue with header and footer alignemnt in lower resolution

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,11 +24,6 @@ main {
     flex-grow: 1;
 }
 
-.index-page-main-content, .offers-page-main-content {
-    max-width: 2000px;
-    margin: auto;
-}
-
 
 /* ---------------------------------------- LANDING PAGE ---------------------------------------- */
 /* NAVBAR */
@@ -94,6 +89,8 @@ main {
     background-repeat: no-repeat;
     background-position: center;
     box-shadow: 0px 5px 5px rgba(58, 47, 47, 0.7);
+    max-width: 2000px;
+    margin: auto;
     margin-bottom: 100px; /*for distance between sections*/
 }
 
@@ -136,6 +133,8 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    max-width: 2000px;
+    margin: auto;
     margin-bottom: 100px;
 }
 
@@ -289,6 +288,7 @@ main {
 #sea-section,
 #city-section {
     width: 100%;
+    max-width: 2000px;
     margin: auto;
     position: relative;
     background-color: #f7e2e2;
@@ -568,7 +568,7 @@ input[type="submit"]:hover {
 
 /* ---------------------------------------- RESPONSIVE SCREEN ---------------------------------------- */
 /* For very large screen */
-@media screen and (min-width: 1024px) and (max-width:1800px){
+@media screen and (min-width: 1024px) and (max-width:3800px){
     /* Header image from Landing page */
     #landing-img {
         height: 750px;
@@ -704,7 +704,6 @@ input[type="submit"]:hover {
 @media screen and (min-width: 300px) and (max-width: 460px) {
     main {
         flex-grow: 1;
-        max-width: 2000px;
         margin: 0;
     }
 
